# cocktailBar

./: .gitignore  .gitmodules  Makefile  README.md  cocktail.yml  cocktailBar.py  cocktail_bar  cocktail_bar.c  cocktail_bar.h  cocktail_bar.py  init.zsh  initCocktail.yml  initStock.yml  init_stock.yml  meson.build  pyproject.toml  stock.yml  test.py  tmpCocktail.yml  tmp_stock.yml  what_remains_to_do.yml
config/: init_cocktail.yml  tmpStock.yml  tmp_cocktail.yml  tmp_coktail.yml  tmp_stock.yml  what_remains_to_do.yml
doc/html/: annotated.html  classes.html  cocktail__bar_8c.html  cocktail__bar_8h.html  cocktail__bar_8h_source.html  cyaml__conf_8h.html  cyaml__conf_8h_source.html  files.html  globals.html  globals_func.html  structCocktail-members.html  structCocktail.html  structIngredient-members.html  structIngredient.html  structOrder-members.html  structOrder.html  structSpecs-members.html  structSpecs.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
doc/latex/: annotated.tex  cocktail__bar_8c.tex  cocktail__bar_8h.tex  cyaml__conf_8h.tex  files.tex  refman.tex  structCocktail.tex  structIngredient.tex  structOrder.tex  structSpecs.tex
src/: cocktail_bar.c  cocktail_bar.h  cyaml_conf.h
