[tool.poetry]
name = "cocktail_bar"
version = "0.1.0"
description = ""
authors = ["Tucobad <gons.thomas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
